# academic-cv-gen

./: .gitignore  Dockerfile  README.md  dff-cv-template.docx  entrypoint.sh  frontend.py  main.py  project-proposals.md  pyproject.toml  requirements.txt  research_Q20980928_results.json
tests/: test_main.py
