[project]
name = "academic-cv-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.93.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "fpdf>=1.7.2",
    "loguru>=0.7.3",
    "openai>=2.34.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
